<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>no.nav.k9.dev</groupId>
	<artifactId>dev-jakarta-transform</artifactId>
	<packaging>jar</packaging>
	<version>0.6.0-SNAPSHOT</version>

	<properties>
		<java.version>11</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<eclipse.transformer.version>0.3.0-20220107.043231-2</eclipse.transformer.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.eclipse.transformer</groupId>
			<artifactId>org.eclipse.transformer.cli</artifactId>
			<!-- uses snapshot version due to bugs with multi-module projects in 0.2.0 -->
			<version>${eclipse.transformer.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.transformer</groupId>
			<artifactId>org.eclipse.transformer</artifactId>
			<version>${eclipse.transformer.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.transformer</groupId>
			<artifactId>org.eclipse.transformer.jakarta</artifactId>
			<version>${eclipse.transformer.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.transformer</groupId>
			<artifactId>org.eclipse.transformer.parent</artifactId>
			<version>${eclipse.transformer.version}</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>UTF-8</encoding>
					<release>${java.version}</release>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>no.nav.k9.dev.jakarta.App</mainClass>
							<classpathPrefix>lib/</classpathPrefix>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.5.1</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<!-- exclude junit, we need runtime dependency only -->
							<includeScope>runtime</includeScope>
							<outputDirectory>${project.build.directory}/lib/</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>github</id>
			<name>GitHub Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/navikt/dev-jakarta-transform/</url>
		</repository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
			<layout>default</layout>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>Github Navikt Maven Packages</name>
			<url>https://maven.pkg.github.com/navikt/dev-jakarta-transform</url>
		</repository>
	</distributionManagement>

	<scm>
		<connection>scm:git:https://github.com/navikt/dev-jakarta-transform.git</connection>
		<developerConnection>scm:git:https://github.com/navikt/dev-jakarta-transform.git</developerConnection>
		<url>https://github.com/navikt/dev-jakarta-transform</url>
	</scm>
</project>